--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,25 +1,31 @@
- <div class="container">
-  <img class="Thumbnail" src="/img/Collegepic.jpg" alt="Generic placeholder image">
-  <div class="text-block">
-    <h4>Nature</h4>
-    <p>What a beautiful sunrise</p>
-  </div>
-</div>
-  </div>
-  <hr>
-  <h1 class="display-4">Glasgow Kelvin College!</h1>
+<div id="main">
+<div class="section-main container">
+  <h1>Glasgow Kelvin College!</h1>
+  <h2> Learners are required to plan, design and implement, a website which satisfies the given brief.</h2>
   <p class="lead">
     Learners are required to plan, design and implement, a website which satisfies the given brief.</p>
+</div>
+</div>
+<hr>
+  <section id="main2" class="section">
+    <div class="container">
+  <h2 class="section-head">
+    <i class="fas fa-main"></i>Glasgow Kelvin College!</h2>
+  <h3>
+    Learners are required to plan, design and implement, a website which satisfies the given brief.</h3>
   <hr class="my-4">
-  <p>Learners can take a range of courses at different levels and receive college certification and recognition for learning.
+  <p class="lead">Learners can take a range of courses at different levels and receive college certification and recognition for learning.
     Introductory courses are for those with little or no experience of using a computer or digital device. The introductory
     courses cover a range of skills such as using office applications, file management up to developing mobile apps and web
     pages. Intermediate courses build upon skills developed through the introductory courses and will generally lead to preparing
     learners for ECDL assessments or further study in other programmes
   </p>
   <a class="btn btn-primary btn-lg" href="#" role="button">Glasgow Kelvin College </a>
-
+  <p class="text-light"> Learners are required to plan, design and implement, a website which satisfies the given brief.</p>
+  <img src="img/smartmockups_jsnmff9q.png" alt="smartckps">
   <hr>
+  </div>
+  </section>
 
   <div class="container">
     <div class="row">
@@ -84,3 +90,5 @@
     </div>
   </div>
 </div>
+<section class="card">
+  </div>
