--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<img class="Thumbnail  logo m-4" itemprop="headline"src="/img/GKClogowithtext.jpg" alt="Generic placeholder image">
+<nav class="navbar navbar-expand-lg navbar-light bg-#fcadeb">
   <div class="container">
     <a class="navbar-brand" href="/">Glasgow Kelvin College</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
