--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -1,39 +1,79 @@
-<img class="Thumbnail  logo m-4" itemprop="headline"src="/img/GKClogowithtext.jpg" alt="Generic placeholder image">
+<img class="Thumbnail  logo m-4" itemprop="headline" src="/img/GKClogowithtext.jpg" alt="Generic placeholder image">
 <nav class="navbar navbar-expand-lg navbar-light bg-#fcadeb">
   <div class="container">
     <a class="navbar-brand" href="/">Glasgow Kelvin College</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+      aria-label="Toggle navigation">
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="/media">Media</a>
-          </li>
+        <li class="nav-item dropdown active">
+          <a class="nav-link dropdown-toggle" href="/about" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false">
+            About Us
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/about">About</a>
+            <a class="dropdown-item" href="#">Colllegue Information</a>
+            <a class="dropdown-item" href="#">Our Performarce</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown active">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false">
+            Courses
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/media">Courses 2019/20</a>
+            <a class="dropdown-item" href="/users/signup">How to apply</a>
+            <a class="dropdown-item" href="/media">shors coursos</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown active">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false">
+            Students
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/media">General Information</a>
+            <a class="dropdown-item" href="/users/signup">Student Carater</a>
+            <a class="dropdown-item" href="/media">Student Welcome</a>
+          </div>
+        </li>
       </ul>
       <ul class="navbar-nav ml-auto">
         {{#if user}}
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Notes 
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="/notes">All comment</a>
-              <a class="dropdown-item" href="/notes/add">Add A comment</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="/users/logout">Logout</a>
-            </div>
+        <li class="nav-item dropdown active">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false">
+            Notes
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/notes">All comment</a>
+            <a class="dropdown-item" href="/notes/add">Add A comment</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="/users/logout">Logout</a>
+          </div>
           </li>
+            <li class="nav-item dropdown active">
+             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false">
+            Applications
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/applications">All Applications</a>
+            <a class="dropdown-item" href="/applications/add">Add An Application</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="/users/logout">Logout</a>
+          </div>
+        </li>
         {{else}}
-          <li class="nav-item active">
-            <a class="nav-link" href="/users/signin">Login</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="/users/signup">Register</a>
-          </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="/users/signin">Login</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="/users/signup">Register</a>
+        </li>
         {{/if}}
       </ul>
     </div>
