--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -3,3 +3,19 @@
   <h1><strong>About Us</h1></strong>
 </div>
 <hr>
+<section class="section">
+  <div class="container">
+    <p class="lead">Glasgow Kelvin College is the newest of Glasgow’s three regional further education colleges. Formed by
+      the merger of John Wheatley, North Glasgow and Stow colleges in November 2013, Glasgow Kelvin has all the expertise,
+      facilities and resources to ensure that students receive a high quality learning experience that will provide them
+      with the skills and knowledge to enable them to compete in today’s challenging jobs market, or to move on to further,
+      more advanced learning. The range of courses available at Glasgow Kelvin is designed to meet the needs of learners
+      of all ages and all levels of ability from introductory tasters and National Qualifications, through Higher Nationals,
+      right up to degree level qualifications. We welcome enquiries and applications from individuals from all backgrounds
+      and abilities. So whatever your plans and career aspirations, Glasgow Kelvin is uniquely positioned to help you achieve
+      your potential and realise your ambitions. Please take a good look at the exciting range of learning opportunities
+      we have and think about how a course at Glasgow Kelvin could start you on the road to success.
+    </p>
+    <hr>
+  </div>
+</section>
