--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -35,7 +35,7 @@
             Students
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/media">General Information</a>
+            <a class="dropdown-item" href="/general-information">General Information</a>
             <a class="dropdown-item" href="/users/signup">Student Carater</a>
             <a class="dropdown-item" href="/media">Student Welcome</a>
           </div>
