--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -80,7 +80,22 @@ img {
   font-size: 4rem;
   margin-bottom: 0;
 }
- 
+
+ /*general-information */
+#general-information {
+  margin: 0;
+  padding: 0;
+  background: url("/img/pexels-photo-1454360.jpeg") no-repeat center/cover;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  overflow-y: hidden;
+ }
+ #general-information h1{
+  color: aliceblue;
+  font-size: 4rem;
+  margin-bottom: 0;
+}
 
 
 /*Footer */
