--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -14,8 +14,8 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/about">About</a>
-            <a class="dropdown-item" href="#">Colllegue Information</a>
-            <a class="dropdown-item" href="#">Our Performarce</a>
+            <a class="dropdown-item" href="/information-collegue">Colllegue Information</a>
+            <a class="dropdown-item" href="/our-performarce">Our Performarce</a>
           </div>
         </li>
         <li class="nav-item dropdown active">
@@ -25,8 +25,8 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/media">Courses 2019/20</a>
-            <a class="dropdown-item" href="/users/signup">How to apply</a>
-            <a class="dropdown-item" href="/media">shors coursos</a>
+            <a class="dropdown-item" href="/how-aply">How to apply</a>
+            <a class="dropdown-item" href="/shors-courses">shors coursos</a>
           </div>
         </li>
         <li class="nav-item dropdown active">
@@ -36,8 +36,8 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/general-information">General Information</a>
-            <a class="dropdown-item" href="/users/signup">Student Carater</a>
-            <a class="dropdown-item" href="/media">Student Welcome</a>
+            <a class="dropdown-item" href="/student-charter">Student Carater</a>
+            <a class="dropdown-item" href="/student-welcome">Student Welcome</a>
           </div>
         </li>
       </ul>
