--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,95 +1,122 @@
-<div id="main">
-  <hr>
-<div class="section-main container">
-  <h1>Glasgow Kelvin College!</h1>
-  <h2> Learners are required to plan, design and implement, a website which satisfies the given brief.</h2>
-  <p class="lead">
-    Learners are required to plan, design and implement, a website which satisfies the given brief.</p>
-</div>
+<hr>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="carousel-item active">
+      <img src="/img/pexels-photo-1438081.jpeg" alt="aply">
+      <div class="carousel-caption d-none d-md-block">
+      <h3>COUSES OPEN NOW</h3>
+      <h1>FOR THIS YEAR</h1>
+    </div>
+    </div>  
+    <div class="carousel-item">
+      <img src="/img/smartmockups_jsqduow0.jpg" alt="aply">
+      <div class="carousel-caption d-none d-md-block">
+      <h2>THE FASHION COLLECTIVE</h2>
+   </div>
+    </div>
+    <div class="carousel-item">
+      <img src="/img/pexels-photo-346809.jpeg" alt="aply">
+      <div class="carousel-caption d-none d-md-block">
+        <p>NEW Flexible Workforce Develoment Fund</p>
+      </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
 <hr>
-  <section id="main2" class="section">
-    <div class="container">
-  <h2 class="section-head">
-    <i class="fas fa-main"></i>Glasgow Kelvin College!</h2>
-  <h3>
-    Learners are required to plan, design and implement, a website which satisfies the given brief.</h3>
-  <hr class="my-4">
-  <p class="lead">Learners can take a range of courses at different levels and receive college certification and recognition for learning.
-    Introductory courses are for those with little or no experience of using a computer or digital device. The introductory
-    courses cover a range of skills such as using office applications, file management up to developing mobile apps and web
-    pages. Intermediate courses build upon skills developed through the introductory courses and will generally lead to preparing
-    learners for ECDL assessments or further study in other programmes
-  </p>
-  <a class="btn btn-primary btn-lg" href="#" role="button">Glasgow Kelvin College </a>
-  <p class="text-light"> Learners are required to plan, design and implement, a website which satisfies the given brief.</p>
-  <img src="img/smartmockups_jsnmff9q.png" alt="smartckps">
-  <hr>
-  </div>
-  </section>
-
+<button type="button" class="btn btn-danger btn-lg btn-block">Search All Courses</button>  
+<section id="main2" class="section">
   <div class="container">
-    <div class="row">
-      <div class="col">
+    <h2 class="section-head">
+      <i class="fas fa-main"></i>Search All Ours Cuorses For This Year 2019</h2>
+    <hr class="my-4">
+    <p class="lead">Learners can take a range of courses at different levels and receive college certification and recognition
+      for learning. Introductory courses are for those with little or no experience of using a computer or digital device.
+      The introductory courses cover a range of skills such as using office  applications, file management up to developing
+      mobile apps and web pages. Intermediate courses build upon skills developed through the introductory courses and will
+      generally lead to preparing learners for ECDL assessments or further study in other programmes
+    </p>
+    <a class="btn btn-primary btn-lg" href="#" role="button">Glasgow Kelvin College </a>
+    <p class="text-light"> Learners are required to plan, design and implement, a website which satisfies the given brief.</p>
+    <img src="img/smartmockups_jsnmff9q.png" alt="smartckps">
+    <hr>
+  </div>
+</section>
 
-      </div>
-      <div class="col">
-        Monday
-      </div>
-      <div class="col">
-        Tuesday
-      </div>
-      <div class="col">
-        Wednesday
-      </div>
-      <div class="col">
-        Thurday
-      </div>
-      <div class="col">
-        Friday
-      </div>
+<div class="container">
+  <div class="row">
+    <div class="col">
+
     </div>
-    <div class="row">
-      <div class="col">
-        AM 9:30- 12:15
-      </div>
-      <div class="col">
-        NO Tutor
-      </div>
-      <div class="col">
-        Tutor on Duty
-      </div>
-      <div class="col">
-        Tutor on Duty
-      </div>
-      <div class="col">
-        Tutor on Duty
-      </div>
-      <div class="col">
-        Tutor on Duty
-      </div>
+    <div class="col">
+      Monday
     </div>
-     <div class="row">
-      <div class="col">
-        AM 9:30- 12:15
-      </div>
-      <div class="col">
-        NO Tutor
-      </div>
-      <div class="col">
-        Tutor on Duty
-      </div>
-      <div class="col">
-        Tutor on Duty
-      </div>
-      <div class="col">
-        Tutor on Duty
-      </div>
-      <div class="col">
-        Tutor on Duty
-      </div>
+    <div class="col">
+      Tuesday
+    </div>
+    <div class="col">
+      Wednesday
+    </div>
+    <div class="col">
+      Thurday
+    </div>
+    <div class="col">
+      Friday
     </div>
   </div>
+  <div class="row">
+    <div class="col">
+      AM 9:30- 12:15
+    </div>
+    <div class="col">
+      NO Tutor
+    </div>
+    <div class="col">
+      Tutor on Duty
+    </div>
+    <div class="col">
+      Tutor on Duty
+    </div>
+    <div class="col">
+      Tutor on Duty
+    </div>
+    <div class="col">
+      Tutor on Duty
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      AM 9:30- 12:15
+    </div>
+    <div class="col">
+      NO Tutor
+    </div>
+    <div class="col">
+      Tutor on Duty
+    </div>
+    <div class="col">
+      Tutor on Duty
+    </div>
+    <div class="col">
+      Tutor on Duty
+    </div>
+    <div class="col">
+      Tutor on Duty
+    </div>
+  </div>
+</div>
 </div>
 <section class="card">
   </div>
