--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -88,18 +88,24 @@ img {
 }
 
  /*information-collegue */
- #information-collegue {
+ #contact {
   margin: 0;
-  padding: 0;
-  background: url("/img/pexels-photo-1454360.jpeg") no-repeat center/cover;
+  padding: 0; 
+  background: url("/img/contact.jpg") no-repeat center/cover;
   width: 100%;
   height: 100vh;
   position: relative;
   overflow-y: hidden;
  }
- #information-collegue h1{
+ #contact h1{
   color: aliceblue;
-  font-size: 4rem;
+  font-size: 6rem;
+  margin-bottom: 0;
+}
+
+#accordion h1{
+  color: aliceblue;
+  font-size: 2rem;
   margin-bottom: 0;
 }
 
@@ -184,6 +190,10 @@ img {
   font-size: 4rem;
   margin-bottom: 0;
 }
+
+/* Contact */
+
+
 
 
 
