--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -14,7 +14,6 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/about">About</a>
-            <a class="dropdown-item" href="/information-collegue">Colllegue Information</a>
             <a class="dropdown-item" href="/our-performarce">Our Performarce</a>
           </div>
         </li>
@@ -39,6 +38,9 @@
             <a class="dropdown-item" href="/student-charter">Student Carater</a>
             <a class="dropdown-item" href="/student-welcome">Student Welcome</a>
           </div>
+        </li>
+        <li class="nav-item dropdown active">
+          <a class="navbar-brand" href="/contact">Contact</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
