--- a/src/views/ecd.hbs
+++ b/src/views/ecd.hbs
@@ -1,11 +1,11 @@
-<div id="shors-courses">
+<div id="ecd">
   <hr>
-  <h1><strong>Shors Courses</h1></strong>
+  <h1><strong>ECD</h1></strong>
 </div>
 <hr>
 <section class="section">
   <div class="container">
-    <h3>Browse, apply and check your status online</h3>
+    <h3>Course Information</h3>
     <p class="lead">you can either search for a particular course, or scroll through the list of courses available. By clicking
       the “View” button, you will be able to access specific course details such as entry requirements, course content and
       progression opportunities. Once you have decided on your choice of course, click the “Apply” button to add it to your
@@ -18,6 +18,13 @@
       return it by post or hand it in to any Glasgow Kelvin campus.
     </p>
     <hr>
-   <button type="button" class="btn btn-success btn-lg btn-block">Online Application Login</button>     
+  <div class="one-third" style="background-image:url(img/pexels-photo-1458318.jpeg);height:300px;width:300px;border:0px;padding:0px;position:relative">
+      <div style="position: absolute;bottom: 0px;padding-bottom: 5px;padding-left: 5px;"> </div>
+    </div>
+    <hr>
+    <div class="so-widget-sow-button so-widget-sow-button-flat-b1a319bfc4ed">
+      <div class="ow-button-base ow-button-align-center"><a href="#" class="ow-icon-placement-left ow-button-hover"><span><span
+       class="sow-icon-fontawesome sow-fas" data-sow-icon="" style="color: #ffffff"></span>APPLY NOW</span></a></div>
+    </div>   
   </div>
 </section>
