--- a/src/views/media.hbs
+++ b/src/views/media.hbs
@@ -1,28 +1,54 @@
-<section class="card">
+<div id="All-courses">
   <hr>
+  <h1><strong>All Courses</h1></strong>
+</div>
+<section class="card">
+  <br>
+  <div class="container">
+    <h1 class="medio-title">Course Department</h1>
+  </div>
+  <br>
   <div class="container">
     <div class="row">
-      <div class="col">
-        <img class="Rounded Corners mx-auto d-block media m-2" src="/img/pexels-photo-1458318.jpeg" alt="Generic placeholder image">
+      <div class="col-md-4">
+        <div class="one-third" style="background-image:url(img/pexels-photo-1458318.jpeg);height:300px;width:300px;border:0px;padding:0px;position:relative">
+          <div style="padding: 5px;background: rgba(0, 0, 0, 0.5);height: 50%;"> <a href="/College-certification" style="color:#fff;text-decoration:none;font-weight:bold;">
+              College Certification</a> </div>
+          <div style="position: absolute;bottom: 0px;padding-bottom: 5px;padding-left: 5px;">
+            <a href="/College-certification" style="display: block;width: 115px;height: 45px;background: #e0007c;padding: 10px;text-align: center;border-radius: 5px;color: white;font-weight: bold;">Read
+              more
+            </a> </div>
+        </div>
       </div>
-      <div class="col">
-        <img class="Rounded Corners  mx-auto d-block media m-2" src="/img/pexels-photo-1438081.jpeg" alt="Generic placeholder image">
+      <div class="col-md-4">
+        <div class="one-third" style="background-image:url(/img/pexels-photo-1462631.jpeg);height:300px;width:300px;border:0px;padding:0px;position:relative">
+          <div style="padding: 5px;background: rgba(0, 0, 0, 0.5);height: 50%;"> <a href="/sqa" style="color:#fff;text-decoration:none;font-weight:bold;">
+              SQA</a> </div>
+          <div style="position: absolute;bottom: 0px;padding-bottom: 5px;padding-left: 5px;">
+            <a href="/sqa" style="display: block;width: 115px;height: 45px;background: #e0007c;padding: 10px;text-align: center;border-radius: 5px;color: white;font-weight: bold;">Read
+              more
+            </a> </div>
+        </div>
       </div>
-      <div class="col">
-        <img class="Rounded Cornersmx-auto d-block media m-2" src="/img/pexels-photo-1462631.jpeg" alt="Generic placeholder image">
+      <div class="col-md-4">
+        <div class="one-third" style="background-image:url(/img/pexels-photo-1438081.jpeg);height:300px;width:300px;border:0px;padding:0px;position:relative">
+          <div style="padding: 5px;background: rgba(0, 0, 0, 0.5);height: 50%;"> <a href="/ecd" style="color:#fff;text-decoration:none;font-weight:bold;">
+              ECD</a> </div>
+          <div style="position: absolute;bottom: 0px;padding-bottom: 5px;padding-left: 5px;">
+            <a href="/ecd" style="display: block;width: 115px;height: 45px;background: #e0007c;padding: 10px;text-align: center;border-radius: 5px;color: white;font-weight: bold;">Read
+              more
+            </a> </div>
+        </div>
       </div>
     </div>
   </div>
-  <hr>
-  <div class="container">
-    <h1 class="medio-title">Cursos</h1>
-  </div>
-  <hr>
-  <hr>
+  <br>
+  <br>
+  <br>
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <h2>College CertificationL</h2>
+        <h2>College Certification</h2>
         <p>Learners can take a range of courses at different levels and receive college certification and recognition for
           learning. Introductory courses are for those with little or no experience of using a computer or digital device.
           The introductory courses cover a range of skills such as using office applications, file management up to developing
@@ -43,7 +69,7 @@
         <p><a class="btn btn-primary btn-lg" href="#" role="button">View details &raquo;</a></p>
       </div>
       <div class="col-md-6">
-        <h2>ECD</h2>  
+        <h2>ECD</h2>
         <p>The European Computer Driving Licence is an SCQF level 5 course made up of 7 units. All 7 units must be completed
           to achieve your certificate. The units are mainly practical - from using office applications, managing files and
           using the internet and email applications. There are also a couple of units which require you to demonstrate knowledge
