--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -20,7 +20,7 @@
     <div class="card-body">
         <img class="Rounded Cornersmx-auto d-block media m-2" src="/img/Sqalogo.jpg" alt="Generic placeholder image">
       <h1>Welcome to Glasgow Kelvin College {{user.name}}</h1>
-      <p clsss="lead">My Applications.</p>
+      <p clsss="lead">My Perfil.</p>
       <a href="/notes/add" class="btn btn-success btn-block">Personal Detals!</a>
     </div>
   </div>
