--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -25,7 +25,6 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/media">Courses 2019/20</a>
             <a class="dropdown-item" href="/how-aply">How to apply</a>
-            <a class="dropdown-item" href="/shors-courses">shors coursos</a>
           </div>
         </li>
         <li class="nav-item dropdown active">
@@ -48,7 +47,7 @@
         <li class="nav-item dropdown active">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">
-            Notes
+            Perfil
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/notes">All comment</a>
