--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -25,14 +25,6 @@ img {
   width: 16%;
 }
 
-.media {
-  width: 90%;
-}
-.col {
- 
-  border: solid 1px black;
-}
-
 .container {
   position: relative;
   font-family: Arial;
@@ -71,6 +63,31 @@ img {
   margin-bottom: 0;
 }
 
+/*All-courses */
+#All-courses {
+  margin: 0;
+  padding: 0;
+  background: url("/img/all-courses.jpg") no-repeat center/cover;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  overflow-y: hidden;
+ }
+
+#All-courses h1 {
+ 
+ color: aliceblue;
+ font-size: 4rem;
+ margin-bottom: 0;
+}
+.medio-title{
+  font-size: 3rem;
+  text-align: left;
+}
+
+
+
+ 
  /*general-information */
 #general-information {
   margin: 0;
@@ -141,17 +158,49 @@ img {
   margin-bottom: 0;
 }
 
-/*shors-courses*/
-#shors-courses {
+/*College-certification*/
+#College-certification {
   margin: 0;
   padding: 0;
-  background: url("/img/all-courses.jpg") no-repeat center/cover;
+  background: url("/img/College-certification.jpg") no-repeat center/cover;
   width: 100%;
   height: 100vh;
   position: relative;
   overflow-y: hidden;
  }
- #shors-courses h1{
+ #College-certification h1{
+  color: aliceblue;
+  font-size: 4rem;
+  margin-bottom: 0;
+}
+
+/*sqa*/
+#sqa {
+  margin: 0;
+  padding: 0;
+  background: url("/img/smartmockups_jsnmff9q.png") no-repeat center/cover;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  overflow-y: hidden;
+ }
+ #sqa h1{
+  color: aliceblue;
+  font-size: 4rem;
+  margin-bottom: 0;
+}
+
+/*ecd*/
+#ecd {
+  margin: 0;
+  padding: 0;
+  background: url("/img/smartmockups_jucvibgs.jpg") no-repeat center/cover;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  overflow-y: hidden;
+ }
+ #ecd h1{
   color: aliceblue;
   font-size: 4rem;
   margin-bottom: 0;
