--- a/src/views/applications/all-applications.hbs
+++ b/src/views/applications/all-applications.hbs
@@ -6,6 +6,10 @@
         <h4 class="card-title d-flex justify-content-between align-items-center">
           {{ title }} <a href="/applications/edit/{{_id}}"><i class="fas fa-edit"></i></a>
         </h4>
+        <p>{{ fullName }}</p>
+        <p>{{ gender }}</p>
+        <p>{{ date }}</p>
+        <p>{{ status }}</p>  
         <p>{{ description }}</p>
         <!-- DELETE REQUEST -->
         <form action="/applications/delete/{{_id}}?_method=DELETE" method="POST">
