--- a/src/views/applications/new-application.hbs
+++ b/src/views/applications/new-application.hbs
@@ -9,13 +9,16 @@
           <input type="text" name="title" class="form-control" placeholder="Title" autofocus/>
         </div>
          <div class="form-group">
-          <input type="text" name="Name" class="form-control" placeholder="Name" autofocus/>
+          <input type="text" name="fullName" class="form-control" placeholder="fullName" autofocus/>
         </div>
         <div class="form-group">
-          <input type="text" name="Gender" class="form-control" placeholder="Gender" autofocus/>
+          <input type="text" name="gender" class="form-control" placeholder="gender" autofocus/>
         </div>
          <div class="form-group">
-          <input type="text" name="Date of Birth" class="form-control" placeholder="Date of Birth" autofocus/>
+          <input type="text" name="date" class="form-control" placeholder="date" autofocus/>
+        </div>
+        <div class="form-group">
+          <input type="text" name="status" class="form-control" placeholder="status" autofocus/>
         </div>
         <div class="form-group">
           <textarea name="description" class="form-control" placeholder="Description"></textarea>
