--- a/src/views/notes/new-note.hbs
+++ b/src/views/notes/new-note.hbs
@@ -1,7 +1,7 @@
 <div class="col-md-4 mx-auto">
   <div class="card text-center">
     <div class="card-header">
-      <h3>New Student</h3>
+      <h3>New Perfil</h3>
     </div>
     <div class="card-body">
       <form action="/notes/new-note" method="POST">
@@ -10,6 +10,9 @@
         </div>
          <div class="form-group">
           <input type="text" name="Name" class="form-control" placeholder="Name" autofocus/>
+        </div>
+        <div class="form-group">
+          <input type="text" name="Gender" class="form-control" placeholder="Gender" autofocus/>
         </div>
         <div class="form-group">
           <input type="text" name="Gender" class="form-control" placeholder="Gender" autofocus/>
